--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,7 @@
+Django>=5.0,<6.0
+djangorestframework>=3.16.0,<4.0
+django-cors-headers>=4.0,<5.0
+gunicorn>=21.0,<22.0
+Pillow>=10.0,<11.0     # for image uploads
+whitenoise>=6.6,<7.0   # for serving static files on Render
 
